--- a/AutoSchedule.Core/AutoSchedule.Core.csproj
+++ b/AutoSchedule.Core/AutoSchedule.Core.csproj
@@ -14,7 +14,8 @@
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="27.1.1" />
-    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.21.0" />
+    <!-- <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.21.0" /> -->
+    <PackageReference Include="Azure.Cosmos" Version="4.0.0-preview3" />
     <PackageReference Include="OptimizedPriorityQueue" Version="5.1.0" />
   </ItemGroup>
 </Project>
