update swagger gen

--- a/AutoSchedule.API/AutoSchedule.API.csproj
+++ b/AutoSchedule.API/AutoSchedule.API.csproj
@@ -10,7 +10,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.1" />
+    <_WebToolingArtifacts Remove="Properties\PublishProfiles\API-AutoSchedule - Web Deploy - Debug.pubxml" />
+    <_WebToolingArtifacts Remove="Properties\PublishProfiles\API-AutoSchedule - Web Deploy - Release.pubxml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.2" />
   </ItemGroup>
 
   <ItemGroup>
