--- a/.gitignore
+++ b/.gitignore
@@ -3,17 +3,19 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# Other files
+Archive/
+AutoSchedule.UI.Server/Properties/
+AutoSchedule.UI/
+*.zip
+
 # User-specific files
-#.zip
 *.ini
 *.rsuser
 *.suo
 *.user
 *.userosscache
 *.sln.docstates
-Archive/
-AutoSchedule.UI.Server/Properties/
-AutoSchedule.UI/
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
